--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
   "buildCommand": "mkdir -p public && cp templates/*.html public/ && cp -r static/* public/ 2>/dev/null || true",
-  "outputDirectory": "public",
-  "framework": "other",
-  "installCommand": ""
+  "outputDirectory": "public"
 }
